--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.BangkitApi"
         tools:targetApi="31">
         <activity
-            android:name=".DetailEventActivity"
+            android:name=".ui.DetailEventActivity"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
